<resources>
    <string name="app_name">Western Gangsters Slots</string>
    <string name="loading_activity">Loading</string>
    <string name="read_privacy">Please <u>read</u> our\nPrivacy Policy and\nTerms</string>
    <string name="btn_accept">btn_accept</string>
    <string name="welcome_menu">Welcome</string>
    <string name="btn_start">btn_start</string>
    <string name="settings_menu">Settings</string>
    <string name="text_music">Music</string>
    <string name="text_vibration">Vibration</string>
    <string name="btn_remove_account">btn_remove_account</string>
    <string name="btn_settings">btn_settings</string>
    <string name="default_total_balance">Balance\n10000</string>
    <string name="text_top_games">Top Games</string>
    <string name="btn_game_first">btn_game_first</string>
    <string name="btn_game_second">btn_game_second</string>
    <string name="text_slot_games">Slot games</string>
    <string name="btn_game_three">btn_game_three</string>
    <string name="btn_game_four">btn_game_four</string>
    <string name="text_flash_games">Flash games</string>
    <string name="btn_game_fife">btn_game_fife</string>
    <string name="btn_game_six">btn_game_six</string>
    <string name="btn_game_seven">btn_game_seven</string>
    <string name="btn_game_block_second">btn_game_block_second</string>
    <string name="btn_game_block_first">btn_game_block_first</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_game_first">FirstSlotsGame</string>
    <string name="title_game_second">SecondSlotsGame</string>
    <string name="title_game_three">ThreeMinerGame\n</string>
    <string name="title_game_four">FourWheelGame</string>
    <string name="title_game_fife">FifeMinerGame</string>
    <string name="title_game_six">SixMinerStompedGame</string>
    <string name="title_game_seven">SevenBonesGame</string>
    <string name="default_win">WIN\n0</string>
    <string name="btn_spin">btn_spin</string>
    <string name="btn_plus_stake">btn_plus_stake</string>
    <string name="btn_minus_stake">btn_minus_stake</string>
    <string name="default_stake">\n300</string>
    <string name="change_orientation">Please change the orientation to landscape</string>
    <string name="default_stake_second">300</string>
    <string name="btn_slots_first">btn_slots_first</string>
    <string name="btn_slots_three">btn_slots_three</string>
    <string name="btn_slots_second">btn_slots_second</string>
    <string name="stake_first">50</string>
    <string name="stake_second">100</string>
    <string name="stake_three">150</string>
    <string name="stake_four">200</string>
    <string name="stake_fife">250</string>
    <string name="stake_six">300</string>
    <string name="default_stake_three_game">BET 50</string>
    <string name="wheel_scene">wheel_scene</string>
    <string name="wheel_arrow">wheel_arrow</string>
    <string name="default_win_fife_game">WIN 0</string>
    <string name="default_total_balance_fife_game">BALANCE 10000</string>
    <string name="default_bet_fife_game">BET 200</string>
    <string name="stake_seven">700</string>
    <string name="stake_eight">400</string>
    <string name="stake_nine">500</string>
    <string name="stake_ten">600</string>
    <string name="btn_bones">btn_bones</string>
    <string name="btn_info">btn_info</string>
    <string name="default_bet_six_game">BET 50</string>
    <string name="btn_game_back">btn_game_back</string>
</resources>