<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu_game"
    android:orientation="vertical"
    tools:context=".ui.menu.MenuGameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_game_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="@dimen/dp30"
            android:background="@drawable/baseline_arrow_back_24"
            android:clickable="true"
            android:contentDescription="@string/btn_game_back"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_top_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/saira_stencil_one"
            android:text="@string/text_top_games"
            android:textColor="@color/white"
            android:textSize="@dimen/sp25"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_game_first"
            android:layout_width="350dp"
            android:layout_height="175dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_game_first"
            android:clickable="true"
            android:contentDescription="@string/btn_game_first"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_top_games" />

        <ImageView
            android:id="@+id/btn_game_second"
            android:layout_width="350dp"
            android:layout_height="175dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_game_second"
            android:clickable="true"
            android:contentDescription="@string/btn_game_second"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_game_first" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_game_slot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_game_top">

        <TextView
            android:id="@+id/text_slot_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp30"
            android:fontFamily="@font/saira_stencil_one"
            android:text="@string/text_slot_games"
            android:textColor="@color/white"
            android:textSize="@dimen/sp25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_slot_games">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_game_three"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_game_three"
                    android:clickable="true"
                    android:contentDescription="@string/btn_game_three"
                    android:focusable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_slot_games" />

                <ImageView
                    android:id="@+id/btn_game_fife"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_game_four"
                    android:clickable="true"
                    android:contentDescription="@string/btn_game_four"
                    android:focusable="true"
                    app:layout_constraintStart_toEndOf="@+id/btn_game_three"
                    app:layout_constraintTop_toBottomOf="@+id/text_slot_games" />


                <ImageView
                    android:id="@+id/btn_game_block_first"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_game_block_first"
                    android:contentDescription="@string/btn_game_block_first"
                    app:layout_constraintStart_toEndOf="@+id/btn_game_three"
                    app:layout_constraintTop_toBottomOf="@+id/text_slot_games" />

            </LinearLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_game_flash"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_game_slot">

        <TextView
            android:id="@+id/text_flash_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp30"
            android:fontFamily="@font/saira_stencil_one"
            android:text="@string/text_flash_games"
            android:textColor="@color/white"
            android:textSize="@dimen/sp25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_flash_games"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ScrollViewCount">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_game_four"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_game_fife"
                    android:clickable="true"
                    android:contentDescription="@string/btn_game_fife"
                    android:focusable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_slot_games" />

                <ImageView
                    android:id="@+id/btn_game_six"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_game_six"
                    android:clickable="true"
                    android:contentDescription="@string/btn_game_six"
                    android:focusable="true"
                    app:layout_constraintStart_toEndOf="@+id/btn_game_three"
                    app:layout_constraintTop_toBottomOf="@+id/text_slot_games" />

                <ImageView
                    android:id="@+id/btn_game_seven"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_game_seven"
                    android:clickable="true"
                    android:contentDescription="@string/btn_game_seven"
                    android:focusable="true"
                    app:layout_constraintStart_toEndOf="@+id/btn_game_three"
                    app:layout_constraintTop_toBottomOf="@+id/text_slot_games" />

                <ImageView
                    android:id="@+id/btn_game_block_second"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_game_block_second"
                    android:contentDescription="@string/btn_game_block_second"
                    app:layout_constraintStart_toEndOf="@+id/btn_game_three"
                    app:layout_constraintTop_toBottomOf="@+id/text_slot_games" />

            </LinearLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
